--- a/module_2/annotated_form_screen/pubspec.yaml
+++ b/module_2/annotated_form_screen/pubspec.yaml
@@ -9,7 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider: ^2.1.5
+  pdf: ^3.11.3
   share_plus: ^11.0.0
+  web: ^1.1.1
 
 dev_dependencies:
   flutter_test:
