--- a/module_3/mentor_form/pubspec.yaml
+++ b/module_3/mentor_form/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
   flutter_hooks: ^0.21.2
   hooks_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
+  path_provider: ^2.1.5
+  pdf: ^3.11.3
+  share_plus: ^11.0.0
+  web: ^1.1.1
 
 dev_dependencies:
   flutter_test:
